Fix bug 6 - the styling for the scrollbar on non-touch screens. Tweak comments on JS file.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,6 +103,8 @@ h2 {
   display: flex;
   flex-direction: column;
   overflow: scroll;
+  scrollbar-color: #b5bfc3 #CDCDCD;
+  scrollbar-width: thin;
   border-top: 2px solid #9E5252;
 }
 
